@@ -533,6 +533,21 @@ class MapperTest(_fixtures.FixtureTest):
             Foo, inherits=Person, polymorphic_identity='foo',
             exclude_properties=('type', ),
             )
+    @testing.resolve_artifact_names
+    @testing.provide_metadata
+    def test_prop_filters_defaults(self):
+        t = Table('t', metadata,
+               Column('id', Integer(), primary_key=True, test_needs_autoincrement=True),
+               Column('x', Integer(), nullable=False, server_default='0')
+              )
+        t.create()
+        class A(object):
+            pass
+        mapper(A, t, include_properties=['id'])
+        s = Session()
+        s.add(A())
+        s.commit()
+
 
     @testing.resolve_artifact_names
     def test_mapping_to_join_raises(self):
